--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,13 @@
-<form>
+<form [formGroup]="loginForm">
     <div class="form-group">
         <label>Email Address</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [formControl]="loginForm.controls.email">
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" [formControl]="loginForm.controls.password">
     </div>
     <button class="btn btn-primary" type="submit">Login</button>
 </form>
+
+{{ loginForm.value | json }}
