--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,15 +1,17 @@
-<form>
+<form [formGroup]="registerForm">
     <div class="form-group">
         <label>Email Address</label>
-        <input type="text" class="form-control">
+        <input type="text" class="form-control" [formControl]="registerForm.controls.email">
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" [formControl]="registerForm.controls.password">
     </div>
     <div class="form-group">
         <label>Confirm Password</label>
-        <input type="password" class="form-control">
+        <input type="password" class="form-control" [formControl]="registerForm.controls.confirmPwd">
     </div>
     <button class="btn btn-primary" type="submit">Register</button>
 </form>
+
+{{ registerForm.value | json }}
