--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,14 +2,17 @@
     <div class="form-group">
         <label>Email Address</label>
         <input type="text" class="form-control" [formControl]="registerForm.controls.email">
+        {{ registerForm.controls.email.errors | json }}
     </div>
     <div class="form-group">
         <label>Password</label>
         <input type="password" class="form-control" [formControl]="registerForm.controls.password">
+        {{ registerForm.controls.password.errors| json }}
     </div>
     <div class="form-group">
         <label>Confirm Password</label>
         <input type="password" class="form-control" [formControl]="registerForm.controls.confirmPwd">
+        {{ registerForm.controls.confirmPwd.errors| json }}
     </div>
     <button class="btn btn-primary" type="submit">Register</button>
 </form>
