--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,18 +1,19 @@
+<div class="alert alert-danger" *ngIf="registerForm.errors && registerForm.errors['mismatch']">
+    Passwords do not match
+</div>
+
 <form [formGroup]="registerForm">
     <div class="form-group">
         <label>Email Address</label>
-        <input type="text" class="form-control" [formControl]="registerForm.controls.email">
-        {{ registerForm.controls.email.errors | json }}
+        <app-input [control]="registerForm.controls.email"></app-input>
     </div>
     <div class="form-group">
         <label>Password</label>
-        <input type="password" class="form-control" [formControl]="registerForm.controls.password">
-        {{ registerForm.controls.password.errors| json }}
+        <app-input type="password" [control]="registerForm.controls.password"></app-input>
     </div>
     <div class="form-group">
         <label>Confirm Password</label>
-        <input type="password" class="form-control" [formControl]="registerForm.controls.confirmPwd">
-        {{ registerForm.controls.confirmPwd.errors| json }}
+        <app-input type="password" [control]="registerForm.controls.confirmPwd"></app-input>
     </div>
     <button class="btn btn-primary" type="submit">Register</button>
 </form>
